Issue #3349956 by saganakat, Santosh_Verma: Nested menus with horiztonal tabs overlap tabs

--- a/styles/components/tabs.scss
+++ b/styles/components/tabs.scss
@@ -318,6 +318,11 @@
     }
   }
 
+  // Nested horizontal tabs.
+  .horizontal-tabs {
+    margin-top: var(--gin-spacing-m);
+  }
+
   .horizontal-tabs-panes,
   [data-horizontal-tabs-panes] {
     width: 100%;
